# exphil

./: .credo.exs  .dockerignore  .gitignore  .muzak.exs  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile.cpu  Dockerfile.filter  Dockerfile.gpu  Dockerfile.play  LICENSE  README.md  TODO.md  devenv.nix  docker-compose.yml  mix.exs  shell.nix
.github/workflows/: ci.yml
20260122/: mlp_asdi_ing_pivot_20260122_043950.axon.incomplete  mlp_confident_dashback_20260122_040642.axon.incomplete  mlp_dashjumping_sloth_20260122_050308.axon.incomplete  mlp_edgeguarding_buffalo_20260122_051722.axon.incomplete  mlp_golden_hedgehog_20260122_052046.axon.incomplete  mlp_hardmodded_neutral_20260122_051408.axon.incomplete  mlp_ledgedashing_scorpion_20260122_042412.axon.incomplete  mlp_modded_rollback_20260122_051825.axon.incomplete  mlp_moonwalking_fthrow_20260122_052616.axon.incomplete  mlp_moonwalking_fthrow_20260122_052616_config.json  mlp_moonwalking_fthrow_20260122_052616_loss.html  mlp_quantum_heron_20260122_050824.axon.incomplete  mlp_stoic_uair_20260122_050747.axon.incomplete
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs  tmux.conf  training.example.yaml
docs/: ARCHITECTURE.md  AXON_ORTHOGONAL_INIT_FIX.md  BITTER_LESSON_PLAN.md  CUSTOM_KERNELS.md  DOLPHIN.md  EMBEDDING_DIMENSIONS.md  EXLA_GPU_CUSTOM_CALLS.md  FLASH_ATTENTION_BACKWARD.md  FLASH_ATTENTION_NIF_RESEARCH.md  FLASH_ATTENTION_PLAN.md  FLASH_ATTENTION_XLA_PLAN.md  FUSED_CUDA_KERNEL_PLAN.md  GOALS.md  GOTCHAS.md  GPU_OPTIMIZATIONS.md  INFERENCE.md  KERNEL_OPTIMIZATIONS.md  LEAGUE.md  MAMBA_OPTIMIZATIONS.md  MEWTWO_TRAINING_PLAN.md  PROJECT_ROADMAP.md  RCLONE_GDRIVE.md  README.md  REPLAY_STORAGE.md  RESEARCH.md  RUNPOD_FILTER.md  SCRIPTS.md  TESTING.md  TRAINING.md  TRAINING_CHEATSHEET.md  TRAINING_FEATURES.md  TRAINING_IMPROVEMENTS.md  TRAINING_KERNEL_OPTIMIZATIONS.md  docker-workflow.md
lib/: exphil.ex  exphil_bridge.ex
native/exphil_peppi/: Cargo.toml
native/exphil_peppi/src/: lib.rs
native/flash_attention_nif/: Cargo.toml  build.rs
native/flash_attention_nif/cuda/: flash_attention.cu
native/flash_attention_nif/src/: lib.rs
native/rust_linear_scan_nif/: Cargo.toml
native/rust_linear_scan_nif/src/: kernel.rs  lib.rs
native/selective_scan_nif/: Cargo.toml  build.sh
native/selective_scan_nif/src/: kernel.rs  lib.rs
notebooks/: evaluation_dashboard.livemd
scenarios/: manifest.json  seed_manifest.json
scripts/: analyze_policy_shine.exs  analyze_replays.exs  audit_frame_weights.exs  auto_bookmarks.exs  auto_sync_checkpoints.sh  bench_lazy_batch.exs  bench_ssd_scan.exs  benchmark_architectures.exs  benchmark_attention.exs  benchmark_backbones.exs  benchmark_bend_scan.exs  benchmark_cuda_compute_scan.exs  benchmark_embeddings.exs  benchmark_fused_ab.sh  benchmark_fused_ops.exs  benchmark_fused_scans.exs  benchmark_futhark_scan.exs  benchmark_inference.exs  benchmark_isolated.sh  benchmark_julia_scan.exs  benchmark_kernel_languages.exs  benchmark_mamba_training.exs  benchmark_mamba_vs_gated.exs  benchmark_mixed_precision.exs  benchmark_mojo_scan.exs  benchmark_nif_scan.exs  benchmark_rust_scan.exs  benchmark_thunderkittens_scan.exs  benchmark_triton_scan.exs  bisect_bf16_conv_crash.exs  bisect_model_complexity.exs  build_replay_registry.exs  build_seed_dir.exs  check_cuda.exs  checkpoint_ladder.sh  cloud_filter_replays.py  coach_report.exs  coverage_ledger.exs  curate_bc.exs  dagger_drill.exs  (+123 more)
test/: exphil_bridge_test.exs  exphil_test.exs  test_helper.exs
(+671 files in other folders)
