[package]
name = "selective_scan_nif"
version = "0.1.0"
edition = "2021"
authors = ["ExPhil Team"]
description = "CUDA-accelerated selective scan for Mamba SSM"

[lib]
name = "selective_scan_nif"
crate-type = ["cdylib"]

[dependencies]
# Elixir NIF bindings
rustler = "0.35"

# CUDA bindings (0.12.x has stable API)
# cuda-12060 matches our Dockerfile's CUDA 12.6
cudarc = { version = "0.12", features = ["driver", "nvrtc", "cuda-12060"], optional = true }

# Error handling
thiserror = "1.0"

# Serialization for tensor data
bytemuck = { version = "1.14", features = ["derive"] }

[features]
default = []
# Enable CUDA support - requires CUDA toolkit installed
cuda = ["dep:cudarc"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
